examples/c/error-codes/violates-constraint/nonfatal/CV-TES1-bad-static.output
CV-TES1-bad-static.c:10:20: warning: invalid application of 'sizeof' to a function type [-Wpointer-arith]
  size_t a = sizeof(func);
                   ^~~~~~
1 warning generated.
CV-TES1-bad-static.c:10:10: error: Trying to compute sizeof of an expression with incomplete or a function type.

    Constraint violation (CV-TES1):
        see C11 section 6.5.3.4:1 http://rvdoc.org/C11/6.5.3.4
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

